Support non-standard `struct stat` [Bug #17793]

On 32-bit Android:
* `st_dev`/`st_rdev` are not `dev_t`
* `st_mode` is not `mode_t`